wuaki-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wuakitv-service
spec:
  selector:
    app: wuakitv-app
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wuakitv-app
spec:
  selector:
    matchLabels:
      app: wuakitv-app
  replicas: 1
  template:
    metadata:
      labels:
        app: wuakitv-app
    spec:
      containers:
        - name: wuakitv-app
          image: docker.io/ranjan21/wuakitv
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
