wuaki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wuaki-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: wuakitv-service
            port:
              number: 8080
